fixed the newsletter section, to appear better on smaller screen sizes (media query)

--- a/css/style.css
+++ b/css/style.css
@@ -191,10 +191,11 @@ body {
     /* Newsletter */
     #newsletter {
         flex-direction: column;
-        font-size: 16px;
+        font-size: 12px;
+        padding: 13px 0;
     }
     #newsletter form {
-        margin: 10px 0;
+        margin: 7px 0;
     }
 
     /* Packages */
